# tinkoff_backend_spring_2022

./: README.md
homework1/: .gitignore  README.md  autoplayer.py  main.py  player.py  requirements.txt  static_data.py  text_data.py  utils.py
homework2/: .env.example  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  setup.cfg
homework2/config/: __init__.py
homework2/tests/: conftest.py
homework2/tests/weather/: test_status.py  test_utils.py  test_web_getter.py  test_web_parser.py
homework2/weather/: __main__.py  status.py  utils.py  web_getter.py  web_parser.py
homework3/: .gitignore  Makefile  README.md  app.py  pyproject.toml  setup.cfg
homework3/main/: __init__.py  routes.py  task.py
homework3/templates/: error.html  index.html  tasks.html
homework3/tests/: test_routes.py  test_task.py
homework4/: .gitignore  Makefile  README.md  app.py  pyproject.toml  setup.cfg
homework4/config/: __init__.py
homework4/database/: __init__.py  models.py  proxy.py  status.py  utils.py  views.py
homework4/project/: __init__.py  auth.py  main.py  utils.py
homework4/rate_updater/: __init__.py
homework4/tests/: conftest.py
homework5/: .gitignore  Dockerfile  Makefile  README.md  README.md.bak  pyproject.toml
homework5/app/: __main__.py
homework5/config/: movies_data.py
homework5/database/: __init__.py  models.py  (+4 more)
homework6/: .gitlab-ci.yml  Dockerfile  Makefile  README.md  README.md.bak  docker-compose.yml  manual_test.py  pyproject.toml  setup.cfg
homework7/: .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  manual_test.py  pyproject.toml  settings.py  setup.cfg
homework8/: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
homework8/app/: __main__.py  main.py  utils.py
homework8/app/routers/: auth.py  contests.py  main.py
homework8/app/templates/: 404.html  base.html  contest_by_id.html  contests.html  index.html  login.html  signup.html  task_by_id.html
homework8/config/: config.py  redis.py  text.py
homework8/database/: __init__.py  models.py  problem_status.py  proxy.py
homework8/tests/: conftest.py  static.py  static_create.py
homework8/tests/app/routers/: test_auth.py  test_contests.py  test_main.py
homework8/tests/database/: config.py  test_proxy.py
homework8/tests/worker/: test_main.py
homework8/worker/: main.py
(+54 files in other folders)
