[tool.poetry]
name = "weather"
version = "0.1.0"
description = "Console weather app"
authors = ["imaximus3"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.0"
bs4 = "^0.0.1"
requests = "^2.27.1"
types-requests = "^2.27.15"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
typer = "*"
pylint = "^2.12.1"
pytest = "^6.2.4"
pytest-deadfixtures = "*"
pytest-mock = "*"
mypy = "^0.910"
pycodestyle = "^2.7.0"
types-toml = "^0.10.0"
black = "^21.7b0"
isort = "^5.10.1"
requests = "^2.26.0"
pytest-cov = "^2.12.1"
pydocstyle = "^6.1.1"
flake8 = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-eradicate = "*"
flake8-isort = "*"
flake8-logging-format = "*"
flake8-print = "*"
flake8-pytest = "*"
flake8-pytest-style = "*"
flake8-quotes = "*"
flake8-return = "*"
unify = "*"
safety = "*"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
